crates/sigil-compiler/tests/snapshots/snap_typecheck__match_arm_literal_narrowing.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 152,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::classify",
                    export_name: "m__classify",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [
                        TypedParam {
                            name: "x",
                            ty: I64,
                            taint: Public,
                            flow: false,
                            mutability: Default,
                        },
                    ],
                    captures: [],
                    ret: I64,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Match(
                                TypedMatchStmt {
                                    scrutinee: TypedExpr {
                                        ty: I64,
                                        kind: Local(
                                            "x",
                                        ),
                                        span: Span {
                                            start: 53,
                                            end: 54,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    arms: [
                                        TypedMatchArm {
                                            pattern: Literal(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                            guard: None,
                                            body: TypedBlock {
                                                statements: [
                                                    Return(
                                                        TypedReturnStmt {
                                                            value: Some(
                                                                TypedExpr {
                                                                    ty: I64,
                                                                    kind: Literal(
                                                                        Int(
                                                                            100,
                                                                        ),
                                                                    ),
                                                                    span: Span {
                                                                        start: 79,
                                                                        end: 82,
                                                                        source: SourceId(
                                                                            4294967295,
                                                                        ),
                                                                    },
                                                                    refinement: None,
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 72,
                                                                end: 83,
                                                                source: SourceId(
                                                                    4294967295,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 70,
                                                    end: 85,
                                                    source: SourceId(
                                                        4294967295,
                                                    ),
                                                },
                                                guaranteed_return: true,
                                            },
                                            span: Span {
                                                start: 65,
                                                end: 85,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                        },
                                        TypedMatchArm {
                                            pattern: Literal(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                            guard: None,
                                            body: TypedBlock {
                                                statements: [
                                                    Return(
                                                        TypedReturnStmt {
                                                            value: Some(
                                                                TypedExpr {
                                                                    ty: I64,
                                                                    kind: Literal(
                                                                        Int(
                                                                            200,
                                                                        ),
                                                                    ),
                                                                    span: Span {
                                                                        start: 109,
                                                                        end: 112,
                                                                        source: SourceId(
                                                                            4294967295,
                                                                        ),
                                                                    },
                                                                    refinement: None,
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 102,
                                                                end: 113,
                                                                source: SourceId(
                                                                    4294967295,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 100,
                                                    end: 115,
                                                    source: SourceId(
                                                        4294967295,
                                                    ),
                                                },
                                                guaranteed_return: true,
                                            },
                                            span: Span {
                                                start: 95,
                                                end: 115,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                        },
                                        TypedMatchArm {
                                            pattern: Wildcard,
                                            guard: None,
                                            body: TypedBlock {
                                                statements: [
                                                    Return(
                                                        TypedReturnStmt {
                                                            value: Some(
                                                                TypedExpr {
                                                                    ty: I64,
                                                                    kind: Literal(
                                                                        Int(
                                                                            0,
                                                                        ),
                                                                    ),
                                                                    span: Span {
                                                                        start: 139,
                                                                        end: 140,
                                                                        source: SourceId(
                                                                            4294967295,
                                                                        ),
                                                                    },
                                                                    refinement: None,
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 132,
                                                                end: 141,
                                                                source: SourceId(
                                                                    4294967295,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 130,
                                                    end: 143,
                                                    source: SourceId(
                                                        4294967295,
                                                    ),
                                                },
                                                guaranteed_return: true,
                                            },
                                            span: Span {
                                                start: 125,
                                                end: 143,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 47,
                                        end: 150,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 41,
                            end: 152,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 152,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
