crates/sigil-compiler/tests/snapshots/snap_typecheck__minimal_return_i64.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 51,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::answer",
                    export_name: "m__answer",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [],
                    captures: [],
                    ret: I64,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: I64,
                                            kind: Literal(
                                                Int(
                                                    42,
                                                ),
                                            ),
                                            span: Span {
                                                start: 46,
                                                end: 48,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 39,
                                        end: 49,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 33,
                            end: 51,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 51,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
