crates/sigil-compiler/tests/snapshots/snap_typecheck__polymorphic_int_literal_at_binding.snap
---
source: crates/sigil-compiler/tests/snap_typecheck.rs
expression: "&typed"
---
TypedProgram {
    modules: [
        TypedModule {
            def_id: DefId(
                0,
            ),
            name: "m",
            ring: Inner,
            trusted: false,
            span: Span {
                start: 0,
                end: 71,
                source: SourceId(
                    4294967295,
                ),
            },
            functions: [
                TypedFunction {
                    name: "m::pinned",
                    export_name: "m__pinned",
                    kind: ModuleFunction,
                    externally_callable: true,
                    params: [],
                    captures: [],
                    ret: U32,
                    ret_taint: Public,
                    ret_flow: false,
                    effects: EffectSet {
                        effects: {},
                    },
                    body: TypedBlock {
                        statements: [
                            Let(
                                TypedLetStmt {
                                    name: "x",
                                    mutable: false,
                                    ty: U32,
                                    taint: None,
                                    value: TypedExpr {
                                        ty: U32,
                                        kind: Literal(
                                            Int(
                                                42,
                                            ),
                                        ),
                                        span: Span {
                                            start: 52,
                                            end: 54,
                                            source: SourceId(
                                                4294967295,
                                            ),
                                        },
                                        refinement: None,
                                    },
                                    span: Span {
                                        start: 39,
                                        end: 55,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                            Return(
                                TypedReturnStmt {
                                    value: Some(
                                        TypedExpr {
                                            ty: U32,
                                            kind: Local(
                                                "x",
                                            ),
                                            span: Span {
                                                start: 67,
                                                end: 68,
                                                source: SourceId(
                                                    4294967295,
                                                ),
                                            },
                                            refinement: None,
                                        },
                                    ),
                                    span: Span {
                                        start: 60,
                                        end: 69,
                                        source: SourceId(
                                            4294967295,
                                        ),
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 33,
                            end: 71,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                        guaranteed_return: true,
                    },
                    span: Span {
                        start: 10,
                        end: 71,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
            ],
        },
    ],
    records: {},
    enums: {},
    effect_registry: EffectRegistry {
        effects: {
            "FFI": 0,
            "Unsafe": 1,
        },
        next_id: 2,
    },
    effect_ops: {},
    instance_homes: {},
}
